--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             <div class="about-content">
                 <div class="about-image-container">
                     <div class="about-image">
-                        <img src="/pics/PROFILE .jpg" alt="Vincent Karanja">
+                        <img src="pics/PROFILE .jpg" alt="Vincent Karanja">
                     </div>
                     <div class="about-image about-image-secondary">
-                        <img src="/pics/pro2.jpg" alt="Vincent Karanja at work">
+                        <img src="pics/pro2.jpg" alt="Vincent Karanja at work">
                     </div>
                 </div>
                 <div class="about-info">
